add more config reading to the package